--- a/BetterQuickTimePlayer/Base.lproj/Main.storyboard
+++ b/BetterQuickTimePlayer/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="102" y="118"/>
+            <point key="canvasLocation" x="1954.9618320610687" y="117.60563380281691"/>
         </scene>
     </scenes>
     <resources>
